syntax = "proto3";

package proteus.acmeair.contract;

import "google/protobuf/empty.proto";

option java_package = "proteus.acmeair.contract";
option java_outer_classname = "BookingLoaderProto";
option java_multiple_files = true;

message DroppedBookings {
    int64 durationMillis = 1;
}

service BookingLoaderService {
    rpc DropBookings (google.protobuf.Empty) returns (DroppedBookings) {}
}